--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^22.5.4",
+    "@types/node-telegram-bot-api": "^0.64.7",
     "dotenv-cli": "^7.4.2",
     "rollup": "^4.21.2",
     "tsx": "^4.19.0",
@@ -31,6 +32,7 @@
     "axios": "^1.7.7",
     "cycletls": "^1.0.26",
     "dayjs": "^1.11.13",
+    "node-telegram-bot-api": "^0.66.0",
     "redis": "^4.7.0",
     "viem": "^2.21.3",
     "winston": "^3.14.2"
